xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__nested_some_quantifier_expr_true.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"some $x in (1, 2, 3), $y in (2, 3) satisfies $x gt $y\")"
---
Ok(
    One(
        Atomic(
            Boolean(
                true,
            ),
        ),
    ),
)
