xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__position_closure.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"(3, 4) ! (let $p := fn:position#0 return $p())\")"
---
Ok(
    Many(
        [
            Atomic(
                Integer(
                    Integer,
                    1,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    2,
                ),
            ),
        ],
    ),
)
