xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__predicate.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"(1, 2, 3)[. ge 2]\")"
---
Ok(
    Sequence(
        StackSequence(
            RefCell {
                value: StackInnerSequence {
                    items: [
                        Atomic(
                            Integer(
                                2,
                            ),
                        ),
                        Atomic(
                            Integer(
                                3,
                            ),
                        ),
                    ],
                },
            },
        ),
    ),
)
