xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__predicate_empty_sequence.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"() [. ge 1]\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [],
            },
        },
    ),
)
