xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__predicate_index.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"(1, 2, 3)[2]\")"
---
Ok(
    One(
        Atomic(
            Integer(
                Integer,
                2,
            ),
        ),
    ),
)
