xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__predicate_index2.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"(1, 2, 3)[2] + (4, 5)[1]\")"
---
Ok(
    Atomic(
        Integer(
            6,
        ),
    ),
)
