xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__predicate_index_all.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"(1, 2, 3)[fn:position()]\")"
---
Ok(
    Sequence(
        StackSequence(
            RefCell {
                value: StackInnerSequence {
                    items: [
                        Atomic(
                            Integer(
                                1,
                            ),
                        ),
                        Atomic(
                            Integer(
                                2,
                            ),
                        ),
                        Atomic(
                            Integer(
                                3,
                            ),
                        ),
                    ],
                },
            },
        ),
    ),
)
