xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__predicate_multiple.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"(1, 2, 3)[. ge 2][. ge 3]\")"
---
Ok(
    One(
        Atomic(
            Integer(
                Integer,
                3,
            ),
        ),
    ),
)
