xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__range_equal.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"1 to 1\")"
---
Ok(
    One(
        Atomic(
            Long(
                1,
            ),
        ),
    ),
)
