xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__range_greater.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"5 to 1\")"
---
Ok(
    Sequence(
        StackSequence(
            RefCell {
                value: StackInnerSequence {
                    items: [],
                },
            },
        ),
    ),
)
